[package]
name = "read_from_serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
crossbeam-utils = "0.8.19"
ggez = "0.9.3"
lazy_static = "1.4.0"
macroquad = "0.4.5"
rand = "0.8.5"
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"

serialport = "4.3.0"
